<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/inputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <EditText
                android:id="@+id/firstNumberTextField"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="96dp"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/firstNumberTextFieldHint"
                android:inputType="text"
                android:minHeight="48dp"
                app:layout_constraintEnd_toStartOf="@+id/mathSymbolTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/mathSymbolTextView"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:layout_weight="1"
                android:text="@string/mathSymbolTextView"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/secondNumberTextField"
                app:layout_constraintStart_toEndOf="@+id/firstNumberTextField"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/secondNumberTextField"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="96dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/secondNumberTextFieldHint"
                android:inputType="text"
                android:minHeight="48dp"
                android:text="@string/secondNumberTextField"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/mathSymbolTextView"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/symbolButtonLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/additionSymbolButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/additionSymbolButton"
                app:layout_constraintEnd_toStartOf="@+id/subtractionSymbolButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/subtractionSymbolButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtractionSymbolButton"
                app:layout_constraintEnd_toStartOf="@+id/multiplicationSymbolButton"
                app:layout_constraintStart_toEndOf="@+id/additionSymbolButton"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/multiplicationSymbolButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multiplicationSymbolButton"
                app:layout_constraintEnd_toStartOf="@+id/divisionSymbolButton"
                app:layout_constraintStart_toEndOf="@+id/subtractionSymbolButton"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/divisionSymbolButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/divisionSymbolButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/multiplicationSymbolButton"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/resultLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/symbolButtonLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/resultTextViewHint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="206dp"
                android:layout_marginEnd="197dp"
                android:layout_weight="1"
                android:text="@string/resultTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/resultTextViewHint" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>